--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.22.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
